Fixed the primary color in ddark mode

--- a/Shared/css/blackTheme.css
+++ b/Shared/css/blackTheme.css
@@ -12,7 +12,7 @@
         --color-logo2: #573866;
         --color-logo-background: #775886;
       
-        --color-primary: #614875;
+        --color-primary: #432a5a;
         --color-primary-2: #775886;
         --color-primary-hover: #7b5a96;
         --color-primary-light: #927b9e;
